# multistate

./: .gitignore  LICENSE.txt  README.md  demo.py  pyproject.toml
multistate/: __init__.py  promoters.py  refractory.py  simulation.py
multistate/tests/: tests.py
src/multistate/: __init__.py  promoters.py  refractory.py  simulation.py
src/multistate/tests/: tests.py
tests/: demo.py  main.py  tests.py
tutorials/: demo.py
