[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "multistate"
dynamic = ["version"]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.4",
    "scipy>=1.12",
    "mpmath>=1.3",
]
requires-python = ">=3.10"
authors = [
    {name = "Ulysse Herbach", email = "ulysse.herbach@inria.fr"},
]
description = "Stochastic gene expression with a multistate promoter"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ulysseherbach/multistate"

[tool.hatch.build.targets.sdist]
exclude = ["/.git*"]

[tool.hatch.build.targets.wheel]
packages = ["src/multistate"]

[tool.hatch.version]
source = "vcs"
raw-options = {local_scheme = "no-local-version"}

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E741"]
